--- a/app/index.html
+++ b/app/index.html
@@ -5,35 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Oleh Zasadnyy, GDG Lviv">
-    <meta name="description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
-    <meta name="keywords" content="event, gdg, gde, devfest, google, programming, android, chrome, polymer, developers, lviv, cloud, dfua">
-    <meta name="google-site-verification" content="GxUE9cpxaP54b7Ymknz-fxWBiIUrJOqx1PZ5gkRHGeY" />
+    <meta name="author" content="Wmitrut & QI Leverage, Arenatech">
+    <meta name="description" content="A arenatech é uma mostra de tecnologias inovadoras, produtos e processos diferenciados dos segmentos automação, eletroeletrônicos, agro alimentar e tecnologia da informação de Francisco Beltrão">
     <link rel="canonical" href="http://devfest.gdg.org.ua/">
-    <title>GDG DevFest Ukraine 2015 &bull; October 23-24, Lviv</title>
-
-    <!-- Social: Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@GDGLviv">
-    <meta name="twitter:title" content="GDG DevFest Ukraine 2015 &bull; October 23-24, Lviv">
-    <meta name="twitter:description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts">
-    <meta name="twitter:image:src" content="http://devfest.gdg.org.ua/images/seo/seo.jpg">
-
-    <!-- Social: Facebook / Open Graph -->
-    <meta property="og:title" content="GDG DevFest Ukraine 2015 &bull; October 23-24, Lviv" />
-    <meta property="og:site_name" content="GDG DevFest Ukraine 2015 &bull; October 23-24, Lviv" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://devfest.gdg.org.ua/" />
-    <meta property="og:image" content="http://devfest.gdg.org.ua/images/seo/seo.jpg" />
-    <meta property="og:description" content="The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts" />
+    <title>Arenatech &bull; 14 a 16 de Outubro, Francisco Beltrão</title>
 
     <!-- Chrome for Android theme color -->
-    <meta name="theme-color" content="#00BCD4">
+    <meta name="theme-color" content="#F44336">
     <!-- Web Application Manifest -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
     <!-- Tile color for Win8 -->
-    <meta name="msapplication-TileColor" content="#00BCD4">
+    <meta name="msapplication-TileColor" content="#F44336">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Polymer Starter Kit">
@@ -145,7 +128,7 @@
                             <footer-block></footer-block>
                         </section>
                         <section data-route="speakers">
-                            <hero-block class="section-shadow container-before-atop" style="background: #00BCD4; color: #fff;">
+                            <hero-block class="section-shadow container-before-atop" style="background: #F44336; color: #fff;">
                                 <div class="top-section">
                                     <div class="title-wrapper layout horizontal">
                                         <h3 class="self-end">Speakers</h3>
