--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -3,12 +3,12 @@
 /* Application theme */
 
 :root {
-    --dark-primary-color: #303F9F;
-    --default-primary-color: #00BCD4;
+    --dark-primary-color: #D32F2F;
+    --default-primary-color: #F44336;
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff;
     /*text/icons*/
-    --accent-color: #FF4081;
+    --accent-color: #ff9900;
     --primary-background-color: #c5cae9;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
@@ -18,7 +18,7 @@
     /* paper-drawer-panel */
     --drawer-menu-color: #ffffff;
     --drawer-border-color: 1px solid #ccc;
-    --paper-toolbar-background: #00BCD4;
+    --paper-toolbar-background: #F44336;
     --paper-toolbar-color: #07434D;
     /* paper-menu */
     --paper-menu-background-color: #fff;
@@ -41,11 +41,11 @@ a paper-button {
 }
 
 paper-button.colorful {
-    color: #00BCD4;
+    color: #F44336;
 }
 
 paper-button[raised].colorful {
-    background: #00BCD4;
+    background: #F44336;
     color: #fff;
 }
 
