--- a/app/elements/about-conference/about-conference.html
+++ b/app/elements/about-conference/about-conference.html
@@ -2,7 +2,7 @@
   <style>
     :host {
       display: block;
-      background: #F44336;
+      background: #67006A;
     }
   </style>
   <template>
