--- a/app/elements/map-block/map-block.html
+++ b/app/elements/map-block/map-block.html
@@ -33,8 +33,8 @@
                 color: inherit;
             }
         </style>
-        <google-map class="fit" zoom="15" latitude="49.809841" longitude="23.982805" styles="[[options]]" disable-zoom disable-default-ui>
-            <google-map-marker latitude="49.809841" longitude="23.972805"></google-map-marker>
+        <google-map class="fit" zoom="15" latitude="-26.0709824" longitude=" -53.028603" styles="[[options]]" disable-zoom disable-default-ui>
+            <google-map-marker latitude="-26.0671253" longitude="-53.0404661"></google-map-marker>
         </google-map>
         <div class="container card-container relative layout horizontal center-center">
             <div class="flex-3 hidden-xs"></div>
@@ -42,13 +42,13 @@
                 <div class="paper-card-container location-card">
                     <div class="card-content">
                         <div class="title">
-                            <h4>Location</h4>
+                            <h4>Local</h4>
                         </div>
-                        <p>Pivdennyi Expo Center</br>Shchyretska St, 36, L'viv, Ukraine</p>
+                        <p>Parque Jayme Canet Jr. - Centro de eventos</br>R. Peru, 938-1132 - Luther King - Francisco Beltrão - PR</p>
                     </div>
                     <div class="card-actions">
                         <a class="bottom-link" href="https://www.google.com/maps/dir//49.8097687,23.9727791/@49.8099885,23.9727469,18z" target="_blank">
-                            <paper-button on-tap="readMore">Get directions</paper-button>
+                            <paper-button on-tap="readMore">Navegue</paper-button>
                         </a>
                     </div>
                 </div>
