--- a/app/elements/statistics-block/statistics-block.html
+++ b/app/elements/statistics-block/statistics-block.html
@@ -44,17 +44,17 @@
         },
         attached: function() {
             this.statistics = [{
-                counter: 500,
-                caption: 'Attendees'
-            }, {
-                counter: 2,
-                caption: 'Days'
-            }, {
-                counter: 40,
-                caption: 'Sessions'
+                counter: +2000,
+                caption: 'Participantes'
             }, {
                 counter: 3,
-                caption: 'Parallel tracks'
+                caption: 'Dias'
+            }, {
+                counter: +25,
+                caption: 'Atrações e oficinas'
+            }, {
+                counter: 4,
+                caption: 'Eixos Tecnológicos'
             }];
         }
     });
