--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -3,8 +3,8 @@
 /* Application theme */
 
 :root {
-    --dark-primary-color: #D32F2F;
-    --default-primary-color: #F44336;
+    --dark-primary-color: #3C2243;
+    --default-primary-color: #67006A;
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff;
     /*text/icons*/
@@ -18,7 +18,7 @@
     /* paper-drawer-panel */
     --drawer-menu-color: #ffffff;
     --drawer-border-color: 1px solid #ccc;
-    --paper-toolbar-background: #F44336;
+    --paper-toolbar-background: #67006A;
     --paper-toolbar-color: #07434D;
     /* paper-menu */
     --paper-menu-background-color: #fff;
@@ -41,11 +41,11 @@ a paper-button {
 }
 
 paper-button.colorful {
-    color: #F44336;
+    color: #67006A;
 }
 
 paper-button[raised].colorful {
-    background: #F44336;
+    background: #67006A;
     color: #fff;
 }
 
