--- a/app/elements/featured-people/featured-people.html
+++ b/app/elements/featured-people/featured-people.html
@@ -72,7 +72,7 @@
             </div>
             <div>
                 <a data-route="speakers" href="#!/speakers" class="block-link">
-                    <paper-button>View all speakers</paper-button>
+                    <paper-button>Veja todas as atividades da Arenatech</paper-button>
                 </a>
             </div>
         </div>
