--- a/app/elements/hero-block/hero-block.html
+++ b/app/elements/hero-block/hero-block.html
@@ -99,15 +99,12 @@
                     <paper-icon-button class="visible-xs" icon="menu" on-tap="togglePanel"></paper-icon-button>
                     <div class="flex hidden-xs">
                         <a data-route="home" href="/" hidden="{{hideLogo}}">
-                            <img class="logo" src="../../images/logo-white.svg" alt="GDG DevFest 2015">
+                            <img class="logo" src="../../images/logo-white.png" alt="Arenatech 2015">
                         </a>
                     </div>
                     <paper-tabs class="hidden-xs" attr-for-selected="data-route" selected="{{route}}">
                         <paper-tab class="text-u-c">
-                            <a data-route="blog" href="#!/blog" class="nav-link horizontal center-center layout">Blog</a>
-                        </paper-tab>
-                        <paper-tab class="text-u-c">
-                            <a data-route="speakers" href="#!/speakers" class="nav-link horizontal center-center layout">Speakers</a>
+                            <a data-route="speakers" href="#!/speakers" class="nav-link horizontal center-center layout">Atividades</a>
                         </paper-tab>
                         <!-- <paper-tab class="text-u-c">
                             <a data-route="contact" href="#!/contact" class="nav-link horizontal center-center layout">Contact</a>
