--- a/app/elements/logos-block/logos-block.html
+++ b/app/elements/logos-block/logos-block.html
@@ -30,8 +30,8 @@
             }
 
             .logo-img {
-                height: 60px;
-                width: 140px;
+                height: 300 px;
+                max-width: 1000px;
             }
         </style>
         <iron-ajax auto url="[[source]]" handle-as="json" on-response="logosLoaded" debounce-duration="300"></iron-ajax>
