--- a/app/elements/tickets-block/tickets-block.html
+++ b/app/elements/tickets-block/tickets-block.html
@@ -65,40 +65,18 @@
         <div id="pricetable" class="container wrap relative layout vertical text-center">
             <h4 class="heading">Tickets</h4>
             <div class="price-block-wrapper flex layout vertical-horizontal">
+
                 <div class="price-block flex text-center">
-                    <span class="ticket-name block">Student</span>
-                    <span class="price">400</span>
-                    <span class="currency">UAH</span>
-                    <span class="additional-info block">*Before October 23 or 100 tickets.
-                        <br/>Requires valid student ID</span>
+                    <span class="ticket-name block">Evento gratuito! Inscreva-se nas oficinas</span>
+                    <span class="price">Vagas limitadas</span>
                 </div>
-                <div class="price-block flex text-center">
-                    <span class="ticket-name block">Early Bird</span>
-                    <span class="price">600</span>
-                    <span class="currency">UAH</span>
-                    <span class="additional-info block">*Before September 27 or 150 tickets</span>
-                </div>
-                <div class="price-block flex text-center">
-                    <span class="ticket-name block">Lazy Bird</span>
-                    <span class="price">800</span>
-                    <span class="currency">UAH</span>
-                    <span class="additional-info block">*Before October 23</span>
-                </div>
+
             </div>
-            <span class="details">Tickets grant access to all conference sections, coffee breaks, lunch and party. Accommodation is NOT included in the ticket price.</span>
+            <span class="details">Monte sua trilha personalizada no sistema de inscrição, todas as talks são gratuitas.</span>
             <div class="flex">
-                <paper-button class="white border-button open-dialog-button" on-tap="openTicketsDialog">Buy a ticket</paper-button>
+              <a href="http://salin.fb.utfpr.edu.br/arenatech/"><paper-button class="white border-button open-dialog-button" >Monte sua trilha!</paper-button></a>
             </div>
         </div>
-        <paper-dialog id="ticketsDialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal>
-                <div id="2event_tickets_widget" style="width: 640px; height: 300px; background:#fff;"></div>
-            <div class="buttons">
-                <a href="http://2event.com/events/312113" target="_blank">
-                    <paper-button>Buy on the website</paper-button>
-                </a>
-                <paper-button dialog-confirm>Close</paper-button>
-            </div>
-        </paper-dialog>
     </template>
 </dom-module>
 <script>
