--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
     <title>Arenatech &bull; 14 a 16 de Outubro, Francisco Beltrão</title>
 
     <!-- Chrome for Android theme color -->
-    <meta name="theme-color" content="#F44336">
+    <meta name="theme-color" content="#67006A">
     <!-- Web Application Manifest -->
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="manifest.json">
     <!-- Tile color for Win8 -->
-    <meta name="msapplication-TileColor" content="#F44336">
+    <meta name="msapplication-TileColor" content="#67006A">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Polymer Starter Kit">
@@ -46,21 +46,20 @@
             <paper-header-panel drawer class="drawer" mode="seamed">
                 <paper-toolbar class="tall">
                     <div class="top">
-                        <img class="logo" src="images/logo-white.svg" alt="GDG DevFest 2015">
+                        <img class="logo" src="images/logo-white.png" alt="GDG DevFest 2015">
                     </div>
                     <div class="bottom">
                         <span class="typo-white">
-                            October 23-24, 2015
+                            14 a 16 de Outubro de 2015
                         </span>
                         <span class="block typo-white">
-                            Lviv, Ukraine
+                            Francisco Beltrão, PR
                         </span>
                     </div>
                 </paper-toolbar>
                 <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
                     <a data-route="#!/home" href="/">Home</a>
-                    <a data-route="#!/blog" href="/blog">Blog</a>
-                    <a data-route="#!/speakers" href="/speakers">Speakers</a>
+                    <a data-route="#!/speakers" href="/speakers">Atividades</a>
                     <!-- <a data-route="contact" href="/contact">Contact</a> -->
                 </paper-menu>
             </paper-header-panel>
@@ -73,42 +72,31 @@
                                 <div class="top-section hero">
                                     <div class="layout vertical-horizontal">
                                         <div class="flex center-content-xs">
-                                            <img class="logo" src="images/logo.svg" alt="GDG DevFest 2015">
-                                            <p class="dates bold">October 23-24, Lviv</p>
-                                            <p class="description">The biggest Google tech conference in Ukraine carefully crafted for you by GDG community! All about Android, Web and Cloud from the world experts</p>
-                                            <p class="slogan">Think out of the box. Create what you want!</p>
+                                            <img class="logo" src="images/logo.png" alt="Arenatech 2015">
+                                            <p class="dates bold">  14 a 16 de Outubro de 2015</p>
+                                            <p class="description">A arenatech é uma mostra de tecnologias inovadoras e diferenciadas dos segmentos automação, eletroeletrônicos, agro alimentar e tecnologia da informação - tem o objetivo de estimular e promover inovação em Francisco Beltrão e região.</p>
+                                            <p class="slogan">Pense fora da caixa. Crie o seu mundo!</p>
                                             <div class="links layout horizontal align-pb-block">
-                                                <a href="http://goo.gl/forms/kymZwijWFy" target="_blank">
-                                                    <paper-button noink>
-                                                        Become a speaker
-                                                    </paper-button>
-                                                </a>
                                                 <a href="#pricetable">
                                                     <paper-button class="colorful" raised>
-                                                        Register
+                                                        Inscreva-se nas oficinas
                                                     </paper-button>
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="flex relative right-section">
-                                            <iron-image class="fit" src="images/lviv.svg" sizing="contain"></iron-image>
+                                            <iron-image class="fit" src="images/beltrao.png" sizing="contain"></iron-image>
                                         </div>
                                     </div>
                                 </div>
-                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=GDG%20DevFest%20Ukraine%202015&dates=20151023T090000/20151024T180000&details=The%20biggest%20Google%20related%20event%20in%20Ukraine%20carefully%20crafted%20for%20you%20by%20GDG%20community!%20Awesome%20speakers%20and%20lot's%20of%20fun!%20Details%20at%20http://devfest.gdg.org.ua&location=Shchyretska%20St%2036,%20L'viv,%20Львівська%20область,%20Ukraine&pli=1&uid=&sf=true&output=xml#eventpage_6"
-                                target="_blank" onclick="ga('send', 'add-event-to-calendar', 'button', 'click');">
-                                    <paper-fab class="section-fab-right" icon="icons:event"></paper-fab>
-                                </a>
                             </hero-block>
                             <statistics-block></statistics-block>
                             <featured-people source="../../data/featured-speakers.json">
-                                <h4 class="heading">Rockstar Speakers</h4>
+                                <h4 class="heading">Palestras principais</h4>
                             </featured-people>
-                            <call-to-action></call-to-action>
-                            <photo-block></photo-block>
+
                             <tickets-block></tickets-block>
-                            <latest-news source="../../data/blog.json"></latest-news>
-                            <social-feed source="http://lviv.gdg.org.ua/tweetledee/favoritesjson.php?c=10&cache_interval=7200"></social-feed>
+
                             <map-block></map-block>
                             <logos-block source="../../data/partners.json">
                                 <h4 class="heading">Partners</h4>
@@ -128,7 +116,7 @@
                             <footer-block></footer-block>
                         </section>
                         <section data-route="speakers">
-                            <hero-block class="section-shadow container-before-atop" style="background: #F44336; color: #fff;">
+                            <hero-block class="section-shadow container-before-atop" style="background: #67006A; color: #fff;">
                                 <div class="top-section">
                                     <div class="title-wrapper layout horizontal">
                                         <h3 class="self-end">Speakers</h3>
