--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
                 <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
                     <a data-route="#!/home" href="/">Home</a>
                     <a data-route="#!/speakers" href="/speakers">Atividades</a>
+                    <a href="/code-of-conduct" href="/speakers">Código de Conduta</a>
                     <!-- <a data-route="contact" href="/contact">Contact</a> -->
                 </paper-menu>
             </paper-header-panel>
@@ -98,9 +99,7 @@
                             <tickets-block></tickets-block>
 
                             <map-block></map-block>
-                            <logos-block source="../../data/partners.json">
-                                <h4 class="heading">Partners</h4>
-                            </logos-block>
+                            
                             <footer-block></footer-block>
                         </section>
                         <section data-route="blog">
